# DesignPatternsWithModernCPP

./: README.md
Bridge/: AdvancedRemoteControl.cpp  IDevice.h  ReadMe.md.txt  RemoteControl.hpp  TV.hpp  main.cpp
Observer_ModernCPP/: ConcereteSubject.cpp  ConcreteObserver.cpp  ReadMe.md  app  main  main.cpp
Observer_ModernCPP/include/: ConcreteObserver.h  ConcreteSubject.h  Interfaces.h
ProducerConsumer/: BoundedQueue.cpp  BoundedQueue.h  CMakeLists.txt  Makefile  main.cpp  producer_consumer
